src-tauri/tests/snapshots/pipeline_scenarios__subagent_genuine_failure_stays_failed.snap
---
source: tests/pipeline_scenarios.rs
expression: run_normalized(msgs)
---
- role: system
  id: msg-1
  content_length: 1
  content:
    - type: subagent
      status: failed
      title: ~
      summary: "Tool error: command not found"
  status: ~
  streaming: ~
