src-tauri/tests/snapshots/pipeline_scenarios__subagent_restart_notification_relabeled_interrupted.snap
---
source: tests/pipeline_scenarios.rs
expression: run_normalized(msgs)
---
- role: system
  id: msg-1
  content_length: 1
  content:
    - type: subagent
      status: interrupted
      title: ~
      summary: "Background agent was running when the previous Cla...d did not complete. Its in-process state was lost.[len:126]"
  status: ~
  streaming: ~
