src-tauri/tests/snapshots/pipeline_scenarios__sys_error_max_turns_rendered.snap
---
source: tests/pipeline_scenarios.rs
expression: run_normalized(msgs)
---
- role: system
  id: s1
  content_length: 1
  content:
    - type: text
      text: "System: error_max_turns"
  status: ~
  streaming: ~
