src-tauri/tests/snapshots/pipeline_scenarios__sys_informational_notice.snap
---
source: tests/pipeline_scenarios.rs
expression: run_normalized(msgs)
---
- role: system
  id: msg-1
  content_length: 1
  content:
    - type: system-notice
      severity: warning
      label: Warning
      body: Command output was truncated
  status: ~
  streaming: ~
