src-tauri/tests/snapshots/pipeline_scenarios__sys_model_refusal_no_fallback_notice.snap
---
source: tests/pipeline_scenarios.rs
expression: run_normalized(msgs)
---
- role: system
  id: msg-1
  content_length: 1
  content:
    - type: system-notice
      severity: error
      label: Model refused by claude-opus-4-5
      body: The model refused this request
  status: ~
  streaming: ~
