src-tauri/tests/snapshots/pipeline_scenarios__sys_notification_notice.snap
---
source: tests/pipeline_scenarios.rs
expression: run_normalized(msgs)
---
- role: system
  id: msg-1
  content_length: 1
  content:
    - type: system-notice
      severity: warning
      label: Notification
      body: Hook completed
  status: ~
  streaming: ~
