src-tauri/tests/snapshots/pipeline_scenarios__sys_permission_denied_notice.snap
---
source: tests/pipeline_scenarios.rs
expression: run_normalized(msgs)
---
- role: system
  id: msg-1
  content_length: 1
  content:
    - type: system-notice
      severity: warning
      label: Permission denied for Bash
      body: Command writes outside the workspace
  status: ~
  streaming: ~
